// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`json ref resolver resolves refs 1`] = `
Object {
  "$schema": "http://json-schema.org/draft-07/schema#",
  "definitions": Object {
    "menu": Object {
      "additionalProperties": true,
      "type": "object",
    },
  },
  "properties": Object {
    "menu": Object {
      "additionalProperties": true,
      "type": "object",
    },
  },
}
`;

exports[`json ref resolver works on objects without refs 1`] = `
Object {
  "$schema": "http://json-schema.org/draft-07/schema#",
  "properties": Object {
    "menu": Object {
      "additionalProperties": true,
      "type": "object",
    },
  },
}
`;
